--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.17",
+    "@vercel/speed-insights": "^1.2.0",
     "tailwindcss": "^4.0.17",
     "vue": "^3.5.13"
   },
