--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@tailwindcss/vite": "^4.0.17",
     "@vercel/speed-insights": "^1.2.0",
     "tailwindcss": "^4.0.17",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
